[package]
name = "echoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.3"
colored = "2.1.0"
chrono = "0.4.34"
md5 = "0.7.0"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
aws-sdk-lambda = "1.13.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.4"
rand = "0.8.5"
fred = "8.0.3"
hyper = "1.2.0"
hyper-util = "0.1.3"
async-trait = "0.1.77"
web-socket = "0.7.0"
base64 = "0.21.7"
sha-1 = "0.10"
http = "0.2.11"
sysinfo = "0.30.6"
tracing = "0.1.40"
metrics-exporter-prometheus = "0.13.1"
prometheus = "0.13.3"

